CSS/Style.css
/* Add Compound Selectors and pseudo selectors */
body {
  min-height: 100%;
  margin-bottom: 6%;
  background-color: #F0EAD6;
  color: black;
  font-family: "Times New Roman", Times, serif;
  font-size: 17px;
  line-height: 2;
}

h1, h2, h3 {
  text-align: center;
  color: black;
  font-family: "Times New Roman", Times, serif;
  font-variant: small-caps;
  line-height: 1;
}
h1{
  text-align: center;
  color: black;
  font-family: "Times New Roman", Times, serif;
  font-variant: small-caps;
  font-size: 28px;
}
h2 {
  text-align: center;
  color: black;
  font-family: "Times New Roman", Times, serif;
  font-variant: small-caps;
  font-size: 20px
}
h2.center {
  font-family: "Times New Roman", Times, serif;
  text-align: center;
  color: black;
  font-variant: small-caps;
  line-height: 1;
  font-size: 15px;
}
.centerimage {
  display: center;
  border-radius: 8px;
  margin-left: auto;
  margin-right: auto;
  height: 50%;
  width: 50%;
}
.essay {
  margin-left: 20px;
  text-align: left;
  color: black;
  font-family: "Times New Roman", Times, serif;
}
h3.essay {
  font-family: "Times New Roman", Times, serif;
  text-align: left;
  color: black;
  font-variant: small-caps;
  line-height: 1;
  font-size: 15px;
}
lh.essay {
  font-family: "Times New Roman", Times, serif;
  text-decoration: underline;
  line-height: 1.5;
}
h2.essay{
  text-align: left;
  color: black;
  font-family: "Times New Roman", Times, serif;
  font-variant: small-caps;
  line-height: 1.5;
}
h1.blog{
  text-align: left;
  font-size: 23px;
  padding-left: 10px;
}
h2.blog{
  text-align: left;
  font-size: 16px;
  padding-left: 16px;
}
  )
a {
  color: black;
  font-family: "Times New Roman", Times, serif;
  font-size: 12px
  font-variant: small-caps;
  line-height: 1.5;
  text-decoration: none;
}

}
p {
  text-align: center;
  color: black;
  font-family: "Times New Roman", Times, serif;
  font-size: 12px
  font-variant: small-caps;
  line-height: 2;
}
p.essay{
  text-indent: 1.5em;
  margin-right: 10px;
}
p.about{
  margin-left: 25%;
  margin-right: 25%;
}
p.returnbutton {
  margin-left: 20px;
  text-align: left;
  line-height: 2;
  font-family: "Times New Roman", Times, serif;
}
p.center {
  text-align: center;
}
ol {
  padding: 5px;
  margin-left: 30px;
}

li {
  padding: 3px;
  line-height: 1.5;
}

lh {
  text-decoration: underline;
  font-size: 20px;
}
lh.blog{
  font-size: 15px;
}
footer {
  height: 8%;
  position: fixed;
  font-style: italic;
  text-align: center;
  background: #F0EAD6;
  bottom: 0px;
  left:inherit;
  width:100%;
  padding:0px;
}

img {
  align: center;
  height: 50%;
  width: 50%;
  padding: 10px;
  padding-left: 25%
}
.pill-nav {
  background-color: black;
  overflow: hidden;
}

/* Style the links inside the navigation bar */
.pill-nav a {
  float: left;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  font-family: "Times New Roman", Times, serif;
  text-decoration: none;
  font-size: 17px;
}

/* Change the color of links on hover */
.pill-nav a:hover {
  background-color: white;
  color: black;
}

/* Add a color to the active/current link */
.pill-nav a.active {
  background-color: white;
  color: black;
}
/* Dropdown Button */
.dropbtn {
  background-color: #2980B9;
  color: white;
  padding: 16px;
  margin-right: 40px;
  font-size: 16px;
  border: none;
  cursor: pointer;
}

/* Dropdown button on hover & focus */
.dropbtn:hover, .dropbtn:focus {
  background-color: #96A2CA;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
  margin-left: 20px;
  position: relative;
  display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 300px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #ddd}

/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.show {display:block;}

/* for resume and projects embed*/
.documentembed {
  text-align: center;
  display:block;
  margin-left: auto;
  margin-right: auto;
  margin:30px;
  width:100%;
}
.container {
  min-height: 92%;
  max-height: 92%;
  min-width: 100%;
  display: grid;
  grid-template-columns: 70% 30%;
  grid-template-rows: auto;
  grid-gap: 10px;
  margin-top: 20px;
  margin-right: 20px;
}
.palmarescontainer {
  grid-template-columns:33% 33% 33%;
  display: grid;
  grid-gap: 10px;

}
.item1 {
  grid-column-start: 1;
  border-style: double solid;
  border-color: black;
  margin-left: 20px;
  margin-bottom: 20px;
  background-color: white;
}
.item2 {
  grid-column-start: 2;
  border-style: double solid;
  border-color: black;
  margin-right: 20px;
  margin-bottom: 20px;
  background-color: white;
}
.item2fixed {
  grid-column-start: 2;
  grid-row-start: 1;
  grid-row-end: 6;
  border-style: double solid;
  border-color: black;
  margin-right: 20px;
  margin-bottom: 20px;
  background-image: url("Dia-D0(F).jpg");
}
.itemfooter {
  grid-column: auto;
  grid-row: auto;
  position: fixed;
  font-style: italic;
  text-align: center;
  background: #F0EAD6;
  bottom: 0px;
  left:inherit;
  width:100%;
  padding:0px;
}
a {
  text-decoration: underline;
  color: #ED7117;
}
a:hover{
  color: blue;
}
.outsidelink {
}

